@@ -1,0 +1,11 @@
+/g/g0:po.llnl.gov:/vol/g0/g0:90
+/g/g1:x2.llnl.gov:/vol/g1/g1:90
+/g/g2:q9.llnl.gov:/vol/g299/g2:90
+/g/g16:c3.llnl.gov:/vol/g16/g16:90
+/g/g17:po.llnl.gov:/vol/g17/g17:90
+/g/g18:q9.llnl.gov:/vol/g18/g18:90
+/g19:x2.llnl.gov:/vol/g19/g19:90
+/g/g20:c3.llnl.gov:/vol/g20/g20:90
+/g/g21:y0.llnl.gov:/vol/g21/g21:90 
+/g/g90:x2.llnl.gov:/vol/g90/g90:90
+/g/g99:q9.llnl.gov:/vol/g299/g99:90
